8225690: Multiple AttachListener threads can be created

Reviewed-by: sspitsyn, cjplummer